--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
+    "eslint": "^3.14.1",
+    "eslint-plugin-import": "^2.2.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2"
