--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-plugin-import": "^2.2.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-json-table": "^0.1.1",
+    "semantic-ui-react": "^0.64.7"
   },
   "scripts": {
     "start": "react-scripts start",
