--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
+    "download": "^5.0.3",
     "eslint": "^3.14.1",
     "eslint-plugin-import": "^2.2.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-json-table": "^0.1.1",
-    "semantic-ui-react": "^0.64.7"
+    "react-toastr": "^2.8.2",
+    "semantic-ui-react": "^0.64.7",
+    "to-csv": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
