--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-import": "^2.2.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-datepicker": "^0.40.0",
     "react-dom": "^15.4.2",
     "react-json-table": "^0.1.1",
     "react-toastr": "^2.8.2",
