--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "download": "^5.0.3",
     "eslint": "^3.14.1",
     "eslint-plugin-import": "^2.2.0",
+    "qs": "^6.3.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-datepicker": "^0.40.0",
     "react-dom": "^15.4.2",
     "react-json-table": "^0.1.1",
+    "react-router": "^3.0.2",
     "react-toastr": "^2.8.2",
     "semantic-ui-react": "^0.64.7",
     "to-csv": "^0.1.1"
